// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InputField /> Should apply props correctly. 1`] = `
<div
  class="form-field inline-block"
>
   
  <input
    class=""
    placeholder="placeholder"
    style="width: 5em;"
    type="text"
  />
</div>
`;

exports[`<InputField /> Should match snapshot. 1`] = `
<div
  class="form-field"
>
   
  <input
    class=""
    placeholder="placeholder"
    type="text"
  />
</div>
`;
